# secoda-analysis-mcp

./: .env.example  .gitignore  README.md  prompt.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
bundle/: README.md  build.sh  manifest.template.json  pyproject.toml
bundle/server/: main.py
core/: config.py
src/secoda_analysis/: __main__.py
src/secoda_analysis/tools/: ai_chat.py
src/secoda_analysis_mcp/tools/: ai_chat.py
tests/: conftest.py
tests/integration/: conftest.py  test_ai_chat.py  test_collections.py  test_entity.py  test_questions.py  test_resources.py  test_search.py
tests/mock/: conftest.py  test_client.py  test_models.py  test_prompt.py  test_tools_ai_chat.py  test_tools_collections.py  test_tools_entity.py  test_tools_questions.py  test_tools_resources.py  test_tools_search.py
tools/: entity.py
